--- a/.hintrc
+++ b/.hintrc
@@ -9,6 +9,12 @@
         "html-has-lang": "off"
       }
     ],
-    "meta-charset-utf-8": "off"
+    "meta-charset-utf-8": "off",
+    "axe/name-role-value": [
+      "default",
+      {
+        "button-name": "off"
+      }
+    ]
   }
 }
