--- a/.hintrc
+++ b/.hintrc
@@ -15,6 +15,13 @@
       {
         "button-name": "off"
       }
-    ]
+    ],
+    "axe/text-alternatives": [
+      "default",
+      {
+        "image-alt": "off"
+      }
+    ],
+    "button-type": "off"
   }
 }
